[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar_lander_dqn"
version = "0.0.1"
authors = [
  { name="Brandon Knape", email="d.brandonk@gmail.com" },
]
description = "lunar_lander_dqn"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    'gym == 0.20.0',
    'Box2D',
    'pandas',
    'protobuf==3.20.0',
    'pyglet==1.5.27',
    'PyOpenGL',
    'ray[tune]',
    'tensorboard',
    'torch==1.7.1',
]
